update script command in yml

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,5 +12,5 @@ jobs:
       - name: Cypress run
         uses: Cypress-io/github-action@v2
         with:
-          build: npm run build
-          start: npm start
+          build: npm install
+          start: npm test
