--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "13.1.0",
+    "cypress-mochawesome-reporter": "^3.6.0",
     "cypress-xpath": "^2.0.1"
-  },
-  "dependencies": {
-    "cypress-file-upload": "^5.0.8",
-    "mocha": "^10.2.0",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.3.0"
   }
 }
