--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,4 +13,4 @@ jobs:
         uses: Cypress-io/github-action@v2
         with:
           build: npm install
-          start: npm test
+          start: npm cy:run
