--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx cypress open",
-    "testHeadless": "cypress run --headless"
+    "testHeadless": "cypress run --headless",
+    "cy:run":"npx cypress run"
   },
   "author": "thakur",
   "license": "ISC",
